--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 }
 #container {
     display : grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     gap: 10px;
     padding: 20px;
