--- a/css/main.css
+++ b/css/main.css
@@ -29,12 +29,12 @@ body {
     height: 3px;
 }
 #container .celda1 {
-    background-color: #006d7b;
+    background-color: #000000;
     padding: 20px;
     border-radius: 10px;
 }
 #container .celda2 {
-    background-color: #9a5d00;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
 }
@@ -46,6 +46,21 @@ body {
     padding: 20px;
     font-family: Arial, sans-serif;
     border: 2px solid #000;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 1200px;
+    margin: auto;
+}
+#container3 {
+    display : grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    gap: 10px;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    border: 2px solid hsl(0, 0%, 100%);
     border-radius: 10px;
     background-color: #f9f9f9;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
